--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -217,7 +217,9 @@ ul.task-list input[type="checkbox"] {
 
 @media (min-width: 576px) {
   .profile {
-    width: 30%;
+    //width: 30%;
+    width: 20%;
+
 
     .address {
       p {
@@ -401,7 +403,9 @@ ul.task-list input[type="checkbox"] {
   text-align: center;
 
   .contact-icons {
-    font-size: 4rem;
+    //font-size: 4rem;
+    font-size: 3rem;
+
 
     a {
       img {
