--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -217,8 +217,7 @@ ul.task-list input[type="checkbox"] {
 
 @media (min-width: 576px) {
   .profile {
-    //width: 30%;
-    width: 10%;
+    width: 30%;
 
 
     .address {
@@ -404,11 +403,11 @@ ul.task-list input[type="checkbox"] {
 
   .contact-icons {
     //font-size: 4rem;
-    font-size: 2rem;
+    font-size: 3rem;
 
 
     a {
-      img {
+/*      img {
         width: 3.2rem;
         height: 3.2rem;
         margin-bottom: 1rem;
@@ -424,7 +423,7 @@ ul.task-list input[type="checkbox"] {
           height: 3.5rem;
         }
       }
-
+*/
       i::before {
         color: var(--global-text-color);
         transition-property: all 0.2s ease-in-out;
