--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -550,7 +550,8 @@ footer.sticky-bottom {
 // Blog
 
 .header-bar {
-  border-bottom: 1px solid var(--global-divider-color);
+  //border-bottom: 1px solid var(--global-divider-color);
+  border-bottom: 1px solid var(--global-theme-color);
   text-align: center;
   padding-top: 2rem;
   padding-bottom: 3rem;
