--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -556,8 +556,7 @@ footer.sticky-bottom {
   padding-bottom: 3rem;
 
   h1 {
-    //color: var(--global-theme-color);
-    color: var(--global-text-color);
+    color: var(--global-theme-color);
     font-size: 5rem;
   }
 }
